--- a/grails-app/i18n/messages_fr.properties
+++ b/grails-app/i18n/messages_fr.properties
@@ -21,3 +21,21 @@ default.paginate.next=Suivant
 default.home.label=Accueil
 default.logout.label=Déconnexion
 default.profil.label=Votre Profil
+
+default.new.label.geoloc=Créer Localisation
+default.list.label.poi=Liste des points d'interêts
+default.list.label.grpois=Liste des groupes de POIs
+default.list.label.geoLoc=Liste des localisations
+default.list.label.illustration=Liste des illustrations
+default.list.label.user=Liste des utilisateurs
+
+default.new.label.poi=Créer Point d'interêt
+default.new.label.grpois=Créer un groupe de POIs
+default.new.label.geoLoc=Ajouter une localisation
+default.new.label.illustration=Ajouter une illustration
+default.new.label.user=Créer un utilisateur
+
+default.button.edit.label=Modifier
+default.button.delete.label=Supprimer
+default.button.create.label=Créer
+default.button.update.label=Mettre à jour
