Fix #23 Remet le bouton de mise à jour
On se retrouve avec deux boutons différents pour la mise à jour, un si on veut ajouter une image et modifier des champs, l'autre si on veut seulement modifier des champs.

--- a/grails-app/i18n/messages_fr.properties
+++ b/grails-app/i18n/messages_fr.properties
@@ -39,3 +39,4 @@ default.button.edit.label=Modifier
 default.button.delete.label=Supprimer
 default.button.create.label=Créer
 default.button.update.label=Mettre à jour
+default.button.updateImage.label=Mettre à jour avec image
